<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>de.ofterdinger</groupId>
    <artifactId>parent</artifactId>
    <version>0.0.13</version>
  </parent>

  <groupId>de.regatta-hd</groupId>
  <artifactId>regatta-hd</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Heidelberger Regatta Software</name>

  <organization>
    <name>Heidelberger Regattaverband e. V.</name>
    <url>http://www.regatta-hd.de/</url>
  </organization>

  <scm>
    <connection>scm:git:git@github.com:Heidelberger-Regattaverband/regatta-hd.git</connection>
    <developerConnection>scm:git:git@github.com:Heidelberger-Regattaverband/regatta-hd.git</developerConnection>
    <tag>HEAD</tag>
    <url>https://github.com/Heidelberger-Regattaverband/regatta-hd</url>
  </scm>

  <properties>
    <maven.compiler.release>16</maven.compiler.release>

    <!-- https://search.maven.org/artifact/org.openjfx/javafx-base -->
    <openjfx.version>17-ea+17</openjfx.version>

    <!-- https://search.maven.org/artifact/org.projectlombok/lombok -->
    <lombok.version>1.18.20</lombok.version>

    <!-- https://search.maven.org/artifact/com.google.inject/guice -->
    <guice.version>5.0.1</guice.version>

    <!-- https://search.maven.org/artifact/org.hibernate/hibernate-core -->
    <hibernate.version>5.5.6.Final</hibernate.version>

    <!-- https://search.maven.org/artifact/com.microsoft.sqlserver/mssql-jdbc -->
    <mssql.version>9.4.0.jre16</mssql.version>

    <!-- https://search.maven.org/artifact/org.apache.commons/commons-lang3 -->
    <commons-lang3.version>3.12.0</commons-lang3.version>

    <!-- https://search.maven.org/artifact/org.apache.commons/commons-configuration2 -->
    <commons-configuration2.version>2.7</commons-configuration2.version>

    <!-- https://search.maven.org/artifact/org.junit.jupiter/junit-jupiter-api -->
    <junit.version>5.7.2</junit.version>

    <!-- https://search.maven.org/artifact/org.liquibase/liquibase-core -->
    <liquibase.version>4.4.3</liquibase.version>
  </properties>

  <modules>
    <module>common</module>
    <module>aquarius-db</module>
    <module>ui</module>
  </modules>

  <prerequisites>
    <maven>3.6.3</maven>
  </prerequisites>

  <dependencyManagement>
    <dependencies>
      <!-- ========== -->
      <!-- Regatta HD -->
      <!-- ========== -->
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>common</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>aquarius-db</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- ============== -->
      <!-- Database & JPA -->
      <!-- ============== -->
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core-jakarta</artifactId>
        <version>${hibernate.version}</version>
      </dependency>
      <dependency>
        <groupId>com.microsoft.sqlserver</groupId>
        <artifactId>mssql-jdbc</artifactId>
        <version>${mssql.version}</version>
      </dependency>
      <dependency>
        <groupId>org.liquibase</groupId>
        <artifactId>liquibase-core</artifactId>
        <version>${liquibase.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Open JavaFX -->
      <!-- =========== -->
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-base</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-controls</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-fxml</artifactId>
        <version>${openjfx.version}</version>
      </dependency>
      <dependency>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-graphics</artifactId>
        <version>${openjfx.version}</version>
      </dependency>

      <!-- ============ -->
      <!-- Google Guice -->
      <!-- ============ -->
      <dependency>
        <groupId>com.google.inject</groupId>
        <artifactId>guice</artifactId>
        <version>${guice.version}</version>
      </dependency>

      <!-- =========== -->
      <!-- Other Tools -->
      <!-- =========== -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-configuration2</artifactId>
        <version>${commons-configuration2.version}</version>
      </dependency>

      <!-- ========== -->
      <!-- Test tools -->
      <!-- ========== -->
      <!-- https://search.maven.org/artifact/org.hamcrest/hamcrest -->
      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- ============ -->
    <!-- Google Guice -->
    <!-- ============ -->
    <dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>

    <!-- ========== -->
    <!-- Test tools -->
    <!-- ========== -->
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--add-opens java.base/java.lang=com.google.guice</argLine>
          <includes>
            <include>**/*Tests</include>
          </includes>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
